# super-njam

./: LICENSE  README.md  coding_guidelines.md  instructions.md  log.md
cplusplus/llamacpp-minimal-example/: CMakeLists.txt  README.md
cplusplus/llamacpp-minimal-example/src/: main-adv.cpp  main-njam.cpp  main-simple.cpp
data/: README.md  wjazzd_readme.md
libs/: README.md
python/: 1_language.py  2_tokenizer.py  3_trainer.py  5_exporter.py  5_trainer_hyper.py  6_exporter.py  7_midi_and_njam.py  README.md
python/super_njam/: __init__.py  audio_tools.py  base36.py  export_tools.py  midi_tools.py  njam_v3.py  tokenizer_tools.py  training_tools.py  weimar_db.py
python/tests/: test_njam_v3.py  test_training_tools.py
